--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -6,5 +6,7 @@
   <p><span style="color: red; font-weight: bold;">Note:</span> Machines that are still active on Hack The Box or TryHackMe cannot have their writeups published to maintain the integrity of the challenges.</p>
 </article>
 {% else %}
-{{ content }}
+<article>
+  {{ content }}
+</article>
 {% endif %}
