--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,16 +2,25 @@
 layout: default
 ---
 
-<article class="post">
+<article class="post" itemscope itemtype="http://schema.org/BlogPosting">
+  <meta itemprop="datePublished" content="{{ page.date | date_to_xmlschema }}">
+  <meta itemprop="dateModified" content="{{ page.last_modified_at | date_to_xmlschema }}">
+  <meta itemprop="author" content="{{ site.social.name }}">
+  <meta itemprop="publisher" content="{{ site.title }}">
+  <meta itemprop="image" content="{{ page.image | default: site.social_preview_image | absolute_url }}">
+
   <header class="post-header">
-    <h1 class="post-title">{{ page.title }}</h1>
+    <h1 class="post-title" itemprop="headline">{{ page.title }}</h1>
     <p class="post-meta">
-      <time datetime="{{ page.date | date_to_xmlschema }}">{{ page.date | date: "%b %-d, %Y" }}</time>
+      <time datetime="{{ page.date | date_to_xmlschema }}" itemprop="datePublished">{{ page.date | date: "%b %-d, %Y" }}</time>
       {% if page.author %} • <span itemprop="author" itemscope itemtype="http://schema.org/Person"><span itemprop="name">{{ page.author }}</span></span>{% endif %}
+      <span class="post-views" data-goatcounter-click="page-views" data-goatcounter-title="{{ page.title }}">
+        <i class="fas fa-eye"></i> <span class="views-count">Loading views...</span>
+      </span>
     </p>
   </header>
 
-  <div class="post-content">
+  <div class="post-content" itemprop="articleBody">
     {% if page.active %}
       {% assign teaser = page.content | split: '<img' | first %}
       {{ teaser | strip_html | truncatewords: 50 }}
@@ -32,4 +41,6 @@ layout: default
       {{ content }}
     {% endif %}
   </div>
-</article> 
+</article>
+
+<script src="{{ '/assets/js/post-views.js' | relative_url }}" defer></script> 
