--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -14,8 +14,8 @@ layout: default
     <p class="post-meta">
       <time datetime="{{ page.date | date_to_xmlschema }}" itemprop="datePublished">{{ page.date | date: "%b %-d, %Y" }}</time>
       {% if page.author %} • <span itemprop="author" itemscope itemtype="http://schema.org/Person"><span itemprop="name">{{ page.author }}</span></span>{% endif %}
-      <span class="post-views" data-goatcounter-click="page-views" data-goatcounter-title="{{ page.title }}">
-        <i class="fas fa-eye"></i> <span class="views-count">Loading views...</span>
+      <span class="post-views">
+        <i class="fas fa-eye"></i> <span data-goatcounter="{{ page.url | absolute_url }}">0</span> views
       </span>
     </p>
   </header>
