--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -41,4 +41,7 @@ layout: default
       {{ content }}
     {% endif %}
   </div>
-</article> 
+</article>
+
+<script data-goatcounter="https://{{ site.analytics.goatcounter.count_url }}/count"
+        async src="//gc.zgo.at/count.js"></script> 
