--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -15,7 +15,7 @@ layout: default
       <time datetime="{{ page.date | date_to_xmlschema }}" itemprop="datePublished">{{ page.date | date: "%b %-d, %Y" }}</time>
       {% if page.author %} • <span itemprop="author" itemscope itemtype="http://schema.org/Person"><span itemprop="name">{{ page.author }}</span></span>{% endif %}
       <span class="post-views">
-        <i class="fas fa-eye"></i> <span data-goatcounter="https://{{ site.analytics.goatcounter.count_url }}/count" data-goatcounter-title="{{ page.title }}">0</span> views
+        <i class="fas fa-eye"></i> <span data-goatcounter="https://3871.goatcounter.com/count" data-goatcounter-title="{{ page.title }}">0</span> views
       </span>
     </p>
   </header>
@@ -43,5 +43,5 @@ layout: default
   </div>
 </article>
 
-<script data-goatcounter="https://{{ site.analytics.goatcounter.count_url }}/count"
-        async src="https://gc.zgo.at/count.js"></script> 
+<script data-goatcounter="https://3871.goatcounter.com/count"
+        async src="//gc.zgo.at/count.js"></script> 
