--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -44,4 +44,4 @@ layout: default
 </article>
 
 <script data-goatcounter="https://3871.goatcounter.com/count"
-        async src="//gc.zgo.at/count.js"></script> 
+        async src="https://gc.zgo.at/count.js"></script> 
