--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -15,7 +15,9 @@ layout: default
       <time datetime="{{ page.date | date_to_xmlschema }}" itemprop="datePublished">{{ page.date | date: "%b %-d, %Y" }}</time>
       {% if page.author %} • <span itemprop="author" itemscope itemtype="http://schema.org/Person"><span itemprop="name">{{ page.author }}</span></span>{% endif %}
       <span class="post-views">
-        <i class="fas fa-eye"></i> <span id="views">0</span> views
+        <i class="fas fa-eye"></i> <span data-goatcounter="https://3871.goatcounter.com/count" 
+                                        data-goatcounter-title="{{ page.title }}"
+                                        data-goatcounter-display="views">0</span> views
       </span>
     </p>
   </header>
