--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -53,4 +53,4 @@ layout: default
   }
 </script>
 <script data-goatcounter="3871.goatcounter.com/count" 
-        async src="//gc.zgo.at/count.js"></script> 
+        async src="https://gc.zgo.at/count.js"></script> 
