--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,11 +3,7 @@ layout: default
 ---
 
 <article class="post" itemscope itemtype="http://schema.org/BlogPosting">
-  <meta itemprop="datePublished" content="{{ page.date | date_to_xmlschema }}">
-  <meta itemprop="dateModified" content="{{ page.last_modified_at | date_to_xmlschema }}">
-  <meta itemprop="author" content="{{ site.social.name }}">
-  <meta itemprop="publisher" content="{{ site.title }}">
-  <meta itemprop="image" content="{{ page.image | default: site.social_preview_image | absolute_url }}">
+  {% include seo-meta.html %}
 
   <header class="post-header">
     <h1 class="post-title" itemprop="headline">{{ page.title }}</h1>
